--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,17 @@
     padding: 0;
 }
 .nav-ea{
-    background-color: gray;
+    background-color: rgb(31, 31, 31);
     height: 100%;
     width: 100%;
     display: flex;
-    justify-content: space-around;
 }
 .nav-ea img{
     height: 25px;
     width: 25px;
     border-radius: 3%;
     color: white;
-    margin-top: 5px;   
-     
+    padding: 10px; 
 }
 .puto{
     color: white;
