--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,53 @@
     color: white;
     padding: 10px; 
 }
-.puto{
-    color: white;
-    background-color: rgb(127, 240, 255);
+
+.about{
+    background-image: url("/Archivos/IMG/banner.jpg");
+    width: 100%;
+    height: 60vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: center;
+;
+    display: grid;
+
+    grid-template-columns: 4rem 1fr 2fr;
+    grid-template-rows: 4rem 1fr 4rem;
+
+
+}
+
+.text{
+    grid-row-start: 2;
+    grid-column-start: 2;
+    align-items: center;
     text-align: center;
-    margin: 2rem;
+}
+
+.text h1{
+    color: white;
+    font-size: 3rem;
+    text-align: center;
+    font-family: eurostile, sans-serif;
+}
+
+.text p{
+    color: white;
+    text-align: center;
+    font-size: 1.15rem;
+    padding-top: 2%;
+    padding-bottom: 6%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.text button{
+    border: 0;
+    text-align: center;
+    align-items: center;
+    border-radius: 12vw;
+    background-color: #E53935;
+    font-size: 1.1rem;
+    padding: 3vh 4vh;
+    font-family: Arial, Helvetica, sans-serif;
 }
