--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 }
 
 .about{
-    background-image: url("/Archivos/IMG/banner.jpg");
+    background-image: url("../Archivos/IMG/banner.jpg");
     width: 100%;
     height: 60vh;
     background-size: cover;
