--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
+@import url(https://db.onlinewebfonts.com/c/e770a9e3ae1a8be2089472bc6391f697?family=Electronic+Arts+Display);
 *{
     margin: 0;
     padding: 0;
+    font-family: electronic arts display, sans-serif;
 }
 .nav-ea{
     background-color: rgb(31, 31, 31);
@@ -34,21 +36,24 @@
     background-color: white;
     display: flex;
     align-items: center;
-    padding-left: 8px;
+    height: 3rem;
+    width: 100%;
 }
 .nav-barra .icono-tres-puntos{
     height: 1.5rem;
-    margin: 12px;
+    width: auto;
+    margin-right: -15px;
+    margin-left: -5px;
 }
 .nav-barra .ea-logo-2{
     height: 2rem;
-    margin: 12px;
+    margin-right: 20px;
+    margin-left: 10px;
+    width: auto;
 }
 .nav-barra a{
-    background-color: white;
-    display: flex;
-    align-items: center;
     margin-left: 20px;
+    color: black;
 }
 .about{
     background-image: url("https://media.contentapi.ea.com/content/dam/ea/fc/fc-26/images/2025/07/fc26-eacom-hero-md-7x2-xl.jpg.adapt.crop7x2.1920w.jpg");
@@ -57,7 +62,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: center;
-;
+
     display: grid;
 
     grid-template-columns: 4rem 1fr 2fr;
@@ -65,7 +70,40 @@
 
 
 }
+.juegos-destacados{
+    display: grid;
+    grid-row-start: 3;
+    grid-column-start: 3;
+    align-items: center;
+    text-align: center;
+}
+.juegos-destacados h3{
+    color: black;
+    font-size: 2rem;
+    text-align: center;
+    font-size: 2.5rem;
+    margin: 50px;
+}
+.juegos-productos{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+.juegos-productos{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+.juegos-productos img{
+    height: 15vw;
+    width: 15vw;
+    padding: 15px;
+}
 
+
+    
 .text{
     grid-row-start: 2;
     grid-column-start: 2;
