--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@
     align-items: center;
     height: 3rem;
     width: 100%;
+    position:fixed;
 }
 .nav-barra .icono-tres-puntos{
     height: 1.5rem;
@@ -212,20 +213,31 @@
     background-color: rgb(236, 236, 236);
     display: flex;
     justify-content: center;
-    padding: 60px;
+    padding: 70px;
     flex-direction: row;
+    text-align: center;
+    align-items: center;
 }
 .equipo-ea a{
-    padding-right: 50px;
+    margin-top: 8px;
+    margin-bottom: 15px;
+    margin-right: 40px;
 }
 .contacto{
-    margin-left: 60px;
+    margin-left: 70px;
 }
 .contacto img{
-    height: 1.5rem;
-    width: auto;
+    height: 1.8rem;
+    width: 1.8rem;
+    margin-right: 25px;
+    align-items: end;
+}
+.contacto a{
+    margin: -5px;
+    align-items: end;
 }
 .contacto h3{
-    margin-top: 24px;
-    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    text-align: end;
 }
