--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,69 @@
     transition: .1s;
 }
 
+.banner-celeste{
+    background-color: #6FB0D6;
+    width: 100%;
+    height: 13vh;
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+}
+    
+.banner-celeste .text-banner-celeste{
+    margin-left: 70px;
+    color: #1a1a1a;
+    font-size: 1.7vh;
+    width: 70%;
+    align-items: stretch;
+}
+
+.banner-celeste button{
+    background-color: #6FB0D6;
+    height: 7vh;
+    width: 9.5vw;
+    justify-content: right;
+    font-size: 2.5vh;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-right: 10vh;
+    border-radius: 5px;
+}
+
+.impact-report{
+    display: flex;
+    background-color: #101057;
+    height: 65vh;
+    justify-content: center;
+}
+
+.impact-report .info-impact-report{
+    width: 35vw;
+    margin: auto;
+    color: white;
+    justify-content: center;
+}
+
+.impact-report .info-impact-report p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+.impact-report button{
+    background-color: #101057;
+    color: white;
+    border-radius: 5px;
+    padding: 1rem;
+    border-color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.3vh;
+    margin-right: 1rem;
+}
+
+.impact-report img{
+    width: auto;
+}
+
 
 footer{
     height: auto;
