--- a/css/style.css
+++ b/css/style.css
@@ -410,6 +410,7 @@
     font-family: Arial, Helvetica, sans-serif;
     margin-right: 10vh;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .impact-report{
@@ -441,6 +442,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2.3vh;
     margin-right: 1rem;
+    cursor: pointer;
 }
 
 .impact-report img{
