--- a/css/style.css
+++ b/css/style.css
@@ -442,9 +442,13 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2.3vh;
     margin-right: 1rem;
-    cursor: pointer;
 }
 
+.impact-report button:hover{
+    transform: scale(1.05);
+    transition: .1s;
+    cursor: pointer;
+}
 .impact-report img{
     width: auto;
 }
