--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: electronic arts display, sans-serif;
+    text-decoration: none;
 }
 .nav-ea{
     background-color: rgb(31, 31, 31);
