--- a/css/style.css
+++ b/css/style.css
@@ -464,6 +464,11 @@
 .impact-report img{
     width: auto;
 }
+.condiciones{
+    padding: 48px 76px 0px 350px;
+    background-color: rgb(236, 236, 236);
+}
+
 footer{
     height: 100%;
     width: auto;
