--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,66 @@
     padding-top: 38%;
     position: relative;
 }
+.latest-games{
+    background-color: rgb(236, 236, 236);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2%;
+    padding-bottom: 5%;
+}
+.latest-games button{
+    height: 8vh;
+    width: 11vw;
+    font-size: 2.5vh;
+    border: black 2px solid;
+    border-radius: 1vh;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
+.ea-play{
+    background-image: url("https://media.contentapi.ea.com/content/dam/eacom/images/2024/09/eacom-ea-play-hero-md-grid-7x2-xl-en.jpg.adapt.crop7x2.1920w.jpg");
+    width: 100%;
+    height: 60vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: center;
+
+    display: grid;
+    grid-template-columns: 12rem 1fr 1.5fr;
+    grid-template-rows: 5rem 1fr 5rem;
+}
+.ea-play-text{
+    grid-row-start: 2;
+    grid-column-start: 2;
+}
+.ea-play-text img{
+    height: 12vh;
+    width: auto;
+}
+.ea-play-text h3{
+    color: white;
+    font-size: 1.5rem;
+    padding-top: 1.5%;
+    padding-bottom: 1%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.ea-play-text p{
+    color: white;
+    font-size: 1.15rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 5%;
+}
+.ea-play-text button{
+    height: 8vh;
+    width: 11vw;
+    background: none;
+    color: white;
+    border: white 2px solid;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.5vh;
+}
     
 .text{
     grid-row-start: 2;
