--- a/css/style.css
+++ b/css/style.css
@@ -306,6 +306,11 @@
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
 }
+.latest-games button:hover{
+    cursor: pointer;
+    transition: .1s;
+    transform: scale(1.05);
+}
 
 .ea-play{
     background-image: url("https://media.contentapi.ea.com/content/dam/eacom/images/2024/09/eacom-ea-play-hero-md-grid-7x2-xl-en.jpg.adapt.crop7x2.1920w.jpg");
@@ -326,6 +331,11 @@
 .ea-play-text img{
     height: 12vh;
     width: auto;
+}
+.ea-play-text button:hover{
+    cursor: pointer;
+    transition: .1s;
+    transform: scale(1.05);
 }
 .ea-play-text h3{
     color: white;
@@ -348,6 +358,7 @@
     border: white 2px solid;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2.5vh;
+    border-radius: 1vh;
 }
     
 .text{
