--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,48 @@
     padding-top: 38%;
     position: relative;
 }
+
+.latest-updates{
+    display: grid;
+    grid-template-columns: 14rem 1fr 1fr 1fr 14rem;
+    grid-template-rows: 1fr 1fr;
+    gap: 2vh;
+}
+.latest-updates img{
+    height: 26vh;
+    width: auto;
+}
+.card1{
+    grid-column-start: 2;
+    grid-row-start: 1;
+
+}
+.card2{
+    grid-column-start: 3;
+    grid-row-start: 1;
+    
+}
+.card3{
+    grid-column-start: 4;
+    grid-row-start: 1;
+    
+}
+.card4{
+    grid-column-start: 2;
+    grid-row-start: 2;
+    
+}
+.card5{
+    grid-column-start: 3;
+    grid-row-start: 2;
+    
+}
+.card6{
+    grid-column-start: 4;
+    grid-row-start: 2;
+    
+}
+
 .latest-games{
     background-color: rgb(236, 236, 236);
     display: flex;
