--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@
     color: black;
 }
 .about{
-    background-image: url("https://media.contentapi.ea.com/content/dam/ea/fc/fc-26/images/2025/07/fc26-eacom-hero-md-7x2-xl.jpg.adapt.crop7x2.1920w.jpg");
+    /*background-image: url("https://media.contentapi.ea.com/content/dam/ea/fc/fc-26/images/2025/07/fc26-eacom-hero-md-7x2-xl.jpg.adapt.crop7x2.1920w.jpg");*/
     width: 100%;
     height: 60vh;
     background-size: cover;
