--- a/css/style.css
+++ b/css/style.css
@@ -768,3 +768,8 @@ footer{
 }
 
 /* --- Codigo nueva página --- */
+.nav-ea{
+    background-color: rgb(31, 31, 31);
+    margin: 100%;
+    height: 20%;
+}
