--- a/css/style-carousel.css
+++ b/css/style-carousel.css
@@ -74,6 +74,7 @@ footer.foot-carousel {
 }
 
 .footer-carousel-links {
+    list-style: none;
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
