--- a/css/style-carousel.css
+++ b/css/style-carousel.css
@@ -46,21 +46,58 @@ body.carousel {
 }
 
 .carousel_slide {
-    margin: 20%;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh; 
+  background-color: #050505;
 }
 
-.carousel_slide .carousel_inner .carousel-caption button {
-    border: 0;
-    text-align: center;
-    border-radius: 0.3vh;
-    padding: 2.5vh 8vh;
-    position: absolute;
-    font-family: Arial, Helvetica, sans-serif;
-    cursor: pointer;
-    background-color: #1b2fe2;
-    color: white;
+.carousel_slide #carouselExampleCaptions {
+  background-color: #1c2225; 
+  width: 500px;
+  max-width: 90%;
+  border: 1px solid #2f3437;
+  padding: 30px 40px;
+  text-align: center;
+  border-radius: 4px;
 }
+
+.carousel_slide img {
+  border-radius: 4px;
+  max-height: 250px;
+  object-fit: cover;
+}
+
+.carousel_slide h5 {
+  font-size: 22px;
+  letter-spacing: 2px;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.carousel_slide p {
+  font-size: 13px;
+  color: #c8c8c8;
+}
+
+.carousel_slide .carousel-caption button {
+  border: 0;
+  text-align: center;
+  border-radius: 4px;
+  padding: 10px 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+  background-color: #1b2fe2;
+  color: white;
+  margin-top: 10px;
+  transition: background 0.3s ease;
+}
+
+.carousel_slide .carousel-caption button:hover {
+  background-color: #0026a3;
+}
+
 
 footer.foot-carousel {
     background-color: rgb(43, 49, 52);
