--- a/css/style-carousel.css
+++ b/css/style-carousel.css
@@ -1,4 +1,4 @@
-/* --- Codigo nueva página --- */
+/* --- Barra navegación --- */
 body.carousel {
     background-color: rgb(6, 6, 7);
 }
@@ -44,6 +44,8 @@ body.carousel {
   width: 20px;
   height: 20px;
 }
+
+/* --- Carrousel ---*/
 
 .carousel_slide {
   display: flex;
@@ -98,6 +100,7 @@ body.carousel {
   background-color: #0026a3;
 }
 
+/* --- Footer ---*/
 
 footer.foot-carousel {
     background-color: rgb(43, 49, 52);
