--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@
 .latest-updates{
     display: grid;
     grid-template-columns: 14rem 1fr 1fr 1fr 14rem;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 8rem;
     gap: 2vh;
     background-color: rgb(236, 236, 236);
 }
@@ -622,6 +622,29 @@
     transform: scale(1.05);
     transition: .1s;
 }
+.botonleer{
+    align-items: center;
+    justify-content: space-between;
+    grid-column-start: 3;
+    grid-row-start: 3;
+    padding-left: 5rem;
+}
+.leermas{
+    border: 0; 
+    text-align: center;
+    border-radius: 0.3vh;
+    padding: 1.8vh 4vh;
+    position: absolute;
+    margin-top: 3.5vh;
+    margin-left: 3vh;
+    margin-right: 6vh;
+    font-size: 1.2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    background: transparent;
+    color: rgb(0, 0, 0);
+    border: 2px solid black;
+}
 
 .banner-celeste{
     background-color: #6FB0D6;
@@ -804,140 +827,4 @@ footer{
 .verificacion{
     margin-top: 50px;
     margin-left: 50px;
-}
-
-@media (max-width: 992px) {
-  .game-grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (max-width: 768px) {
-  .nav-links {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 70px;
-    right: 0;
-    width: 60%;
-  }
-  .menu-toggle {
-    display: block;
-  }
-  .hero h1 {
-    font-size: 2.2rem;
-  }
-  .game-grid {
-    grid-template-columns: 1fr;
-  }
-}
-
-@media (max-width: 480px) {
-  .hero h1 {
-    font-size: 1.8rem;
-  }
-  .hero p {
-    font-size: 1rem;
-  }
-  .hero-content {
-    padding: 1rem;
-  }
-  .game-card {
-    padding: 2rem;
-  }
-}
-
-/* --- Codigo nueva página --- */
-body.carousel {
-    background-color: rgb(6, 6, 7);
-}
-
-.nav-ea {
-    background-color: rgb(40, 45, 48);
-    margin: auto;
-    height: 3rem;
-}
-
-.nav-ea a {
-    color: gray;
-    text-decoration: none;
-    display: flex;
-    flex-direction: left;
-}
-
-.nav-ea .btnuser {
-    padding: 1vh 1vw;
-    text-align: center;
-    background-color: rgb(44, 44, 44);
-    color: white;
-    border-color: white;
-}
-
-.carousel_slide {
-    margin: 20%;
-
-}
-
-.carousel_slide .carousel_inner .carousel-caption button {
-    border: 0;
-    text-align: center;
-    border-radius: 0.3vh;
-    padding: 2.5vh 8vh;
-    position: absolute;
-    font-family: Arial, Helvetica, sans-serif;
-    cursor: pointer;
-    background-color: #1b2fe2;
-    color: white;
-}
-
-footer.foot-carousel {
-    background-color: rgb(43, 49, 52);
-    color: #d1d1d1;
-    font-family: "Arial", sans-serif;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 0.08em;
-    padding: 25px 40px;
-    border-top: 1px solid #2f3437;
-}
-
-.footer-carousel-links {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    padding: 0;
-    margin: 0 0 10px 0;
-    color: #ffffff;
-    text-decoration: none;
-}
-
-.footer-carousel-links a {
-    color: #ffffff;
-    text-decoration: none;
-    font-weight: bold;
-    transition: color 0.3s ease;
-}
-
-.footer-carousel-links a:hover {
-    color: #00adee;
-}
-
-.footer-carousel-mid {
-    border-top: 1px solid #2f3437;
-    border-bottom: 1px solid #989c9e;
-    margin: 10px 0;
-    padding: 10px 0;
-    text-transform: none;
-    color: #c8c8c8;
-    font-size: 11px;
-    letter-spacing: 0;
-    line-height: 1.5;
-}
-
-.footer-carousel-bottom {
-    margin-top: 10px;
-    font-size: 10px;
-    color: #aaa;
-    letter-spacing: 0.12em;
 }
