--- a/css/style-carousel.css
+++ b/css/style-carousel.css
@@ -1,13 +1,16 @@
 html, body {
-  height: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 /* --- Barra navegación --- */
 
 body.carousel {
+    display: flex;
+    flex-direction: column;
     background-color: rgb(6, 6, 7);
-    padding: 0;
-    margin: 0;
+    min-height: 100vh;
 }
 
 .nav-ea {
@@ -60,6 +63,13 @@ body.carousel {
   min-height: 100vh;
 }
 
+main.main-carousel{
+    flex: 1;
+    background-color: #050505;
+    padding: 0;
+    margin: 0;
+}
+
 .main-carousel {
   background-color: #050505;
   padding: 0;
@@ -91,9 +101,10 @@ body.carousel {
 }
 
 .carousel_slide img {
-  border-radius: 4px;
-  max-height: 250px;
-  object-fit: cover;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    border-radius: 0;
 }
 
 .carousel_slide h5 {
@@ -152,10 +163,6 @@ body.carousel {
 /* --- Footer ---*/
 
 footer.foot-carousel {
-  margin-top: auto;
-}
-
-footer.foot-carousel {
     background-color: rgb(43, 49, 52);
     color: #d1d1d1;
     font-family: "Arial", sans-serif;
@@ -164,6 +171,7 @@ footer.foot-carousel {
     letter-spacing: 0.08em;
     padding: 25px 40px;
     border-top: 1px solid #2f3437;
+    margin-top: 0;
 }
 
 .footer-carousel-links {
