--- a/css/style-carousel.css
+++ b/css/style-carousel.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
     padding: 0;
@@ -14,56 +15,56 @@ body.carousel {
 }
 
 .nav-ea {
-  background-color: #2f2f2f; 
-  color: #ffffff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 25px;
-  border-bottom: 2px solid #0a0a0a; 
+    background-color: #2f2f2f;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 25px;
+    border-bottom: 2px solid #0a0a0a;
 }
 
 .Banner_compra {
-  color: #d1d1d1;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 14px;
-  letter-spacing: 0.5px;
+    color: #d1d1d1;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 14px;
+    letter-spacing: 0.5px;
 }
 
 .Banner_compra:hover {
-  color: #ffffff;
+    color: #ffffff;
 }
 
 .btnuser {
-  background-color: transparent;
-  border: 1px solid #9e9e9e;
-  color: #ffffff;
-  border-radius: 6px;
-  padding: 5px 7px;
-  cursor: pointer;
-  transition: all 0.2s ease;
+    background-color: transparent;
+    border: 1px solid #9e9e9e;
+    color: #ffffff;
+    border-radius: 6px;
+    padding: 5px 7px;
+    cursor: pointer;
+    transition: all 0.2s ease;
 }
 
 .btnuser:hover {
-  border-color: #ffffff;
-  color: #00adee; 
+    border-color: #ffffff;
+    color: #00adee;
 }
 
 .btnuser svg {
-  width: 20px;
-  height: 20px;
+    width: 20px;
+    height: 20px;
 }
 
 /* --- Carrousel ---*/
 
 body.carousel {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-main.main-carousel{
+main.main-carousel {
     flex: 1;
     background-color: #050505;
     padding: 0;
@@ -71,18 +72,21 @@ main.main-carousel{
 }
 
 .main-carousel {
-  background-color: #050505;
-  padding: 0;
+    background-color: #050505;
+    padding: 0;
 }
 
 .carousel_slide {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
 }
 
-.carousel-slide .carousel{
+.carousel-slide .carousel {
     width: 100%;
     max-width: 100%;
     border: none;
@@ -91,13 +95,13 @@ main.main-carousel{
 }
 
 .carousel_slide #carouselExampleCaptions {
-  background-color: #1c2225; 
-  width: 500px;
-  max-width: 90%;
-  border: 1px solid #2f3437;
-  padding: 30px 40px;
-  text-align: center;
-  border-radius: 4px;
+    background-color: #1c2225;
+    width: 500px;
+    max-width: 90%;
+    border: 1px solid #2f3437;
+    padding: 30px 40px;
+    text-align: center;
+    border-radius: 4px;
 }
 
 .carousel_slide img {
@@ -108,32 +112,33 @@ main.main-carousel{
 }
 
 .carousel_slide h5 {
-  font-size: 22px;
-  letter-spacing: 2px;
-  font-weight: bold;
-  color: #ffffff;
+    font-size: 22px;
+    letter-spacing: 2px;
+    font-weight: bold;
+    color: #ffffff;
 }
 
 .carousel_slide p {
-  font-size: 13px;
-  color: #c8c8c8;
+    font-size: 13px;
+    color: #c8c8c8;
 }
 
 .carousel_slide .carousel-caption button {
-  border: 0;
-  text-align: center;
-  border-radius: 4px;
-  padding: 10px 25px;
-  font-family: Arial, Helvetica, sans-serif;
-  cursor: pointer;
-  background-color: #1b2fe2;
-  color: white;
-  margin-top: 10px;
-  transition: background 0.3s ease;
+    border: 0;
+    text-align: center;
+    border-radius: 4px;
+    padding: 10px 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    background-color: #1b2fe2;
+    color: white;
+    margin-top: 10px;
+    transition: background 0.3s ease;
+    margin-bottom: 30px
 }
 
 .carousel_slide .carousel-caption button:hover {
-  background-color: #0026a3;
+    background-color: #0026a3;
 }
 
 .carousel-item {
@@ -145,6 +150,8 @@ main.main-carousel{
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
+    display: inline-block;
+    text-decoration: none;
     border: 0;
     border-radius: 4px;
     padding: 10px 25px;
