--- a/css/stylecompra.css
+++ b/css/stylecompra.css
@@ -48,11 +48,14 @@
 /*Header #2*/
 
 .header2 {
-    background-color: black;
-    padding: 3vh;
-    display: flex;
-    align-items: center;
-    justify-content: start;
+  background-color: black;
+  padding: 2vh;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
 }
 
 .battlefield {
@@ -60,6 +63,7 @@
     align-items: center;
 }
 
+/*Barra de navegacion del header 2*/
 .barranav .nav-link,
 .barranav .navbar-nav .nav-link,
 .barranav .navbar-nav .nav-item .nav-link,
@@ -82,6 +86,8 @@
 
 .barranav .navbar {
   background-color: black;
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 .barranav .nav-link {
@@ -92,16 +98,24 @@
   background-color: rgb(27, 27, 27);
 }
 
-
-.opciones {
-    display: flex;
-    padding-left: 4vh;
-    gap: 5vw;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: medium;
+.barranav .nav-item.dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0;
 }
 
+/*Imagen header 2*/
 .header2 img {
-    width: 15vw;
+    width: 10vw;
     height: auto;
+}
+
+/*Boton de compra*/
+.comprar{
+  padding-left: 40vh;
+}
+
+
+.comprar button{
+    background-color: orangered;
+    padding: 5px 20px 5px 20px;
 }
