--- a/css/style-carousel.css
+++ b/css/style-carousel.css
@@ -147,7 +147,7 @@ main.main-carousel {
 
 .btn-carousel {
     position: absolute;
-    bottom: 20px;
+    bottom: 10vh;
     left: 50%;
     transform: translateX(-50%);
     display: inline-block;
