--- a/css/stylecompra.css
+++ b/css/stylecompra.css
@@ -3,6 +3,15 @@
     padding: 0;
 }
 
+body{
+    background-image: url("https://www.ea.com/_next/image?url=%2F_next%2Fstatic%2Fmedia%2FBF6_BaseBG.3b6ebe76.png&w=2560&q=80");
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 /*Header #1*/
 
 .header1 {
@@ -20,10 +29,10 @@
     gap: 15px;
     color: rgb(144, 144, 144);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: small;
+    font-size: medium;
 }
 
-/*Boton de Usuario del Header*/
+/*Boton de Usuario del Header1*/
 .usuario {
     display: flex;
     justify-content: flex-end;
@@ -118,4 +127,21 @@
 .comprar button{
     background-color: orangered;
     padding: 5px 20px 5px 20px;
+}
+
+/*Comprar*/
+
+.compra{
+    padding: 7% 5%;
+    color: white;
+}
+
+.compra h1{
+    font-size: 30px;
+}
+
+.compra img{
+    width: 60rem;
+    height: auto;
+    padding-top: 20px;
 }
