--- a/css/style-carousel.css
+++ b/css/style-carousel.css
@@ -145,6 +145,26 @@ main.main-carousel {
     position: relative;
 }
 
+.carousel-item img {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    transition: 0.6s ease-in-out;
+}
+
+.carousel-item h1 {
+    position: absolute;
+    bottom: 18vh;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    font-size: 3rem;
+    letter-spacing: 2px;
+    text-shadow: 0 0 8px rgba(0, 0, 0, 0.7);
+    text-transform: uppercase;
+    margin: 0;
+}
+
 .btn-carousel {
     position: absolute;
     bottom: 10vh;
