--- a/css/stylecompra.css
+++ b/css/stylecompra.css
@@ -187,7 +187,7 @@ body{
     margin-bottom: 0;
 }
 
-.apartado .añadir{
+.apartado .acciones .añadir{
     margin-top: 10px;
     max-width: 100%;
     font-size: small;
@@ -199,4 +199,47 @@ body{
     box-shadow: none;
     border: none;
     cursor: pointer;
+}
+
+.apartado .carrito{
+    width: 5vh;
+    height: auto;
+}
+
+.acciones {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.acciones .btns button {
+  width: 20px;
+  height: 35px;
+  background-color: grey;
+  opacity: 0.3;
+  border: none;
+  border-radius: 5px;
+}
+
+.btns p#aumento {
+  width: auto;
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  color: white;
+}
+
+
+.acciones .carrito {
+  width: 40px;
+  height: auto;
+}
+
+.btns {
+  display: flex;
+  align-items: center;
+}
+
+.apartado .texto1 p{
+  padding-top: 15px;
 }
