--- a/css/stylecompra.css
+++ b/css/stylecompra.css
@@ -243,3 +243,48 @@ body{
 .apartado .texto1 p{
   padding-top: 15px;
 }
+
+.footer1{
+  background-color: rgb(47, 56, 62);
+  color: white;
+  padding: 4%;
+}
+
+.redes{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: small;
+}
+
+.redes img{
+  width: 30px;
+  height: auto;
+  padding-left: 10px;
+}
+
+.logoea{
+  display: flex;
+  justify-content: start;
+  gap: 50rem;
+}
+
+.logoea img{
+  max-width: 100%;
+  width: 20vw;
+  height: 10vw;
+  padding-top: 2vw;
+  padding-bottom: 2vw;
+}
+
+.clasificacion{
+  display: flex;
+  justify-content: end;
+  align-items: end;
+}
+
+.clasificacion img{
+  width: 80px;
+  height: auto;
+}
