--- a/css/stylecompra.css
+++ b/css/stylecompra.css
@@ -33,25 +33,46 @@ body{
 }
 
 /*Boton de Usuario del Header1*/
-.usuario {
+.nav-ea {
+    background-color: #2f2f2f;
+    color: #ffffff;
     display: flex;
-    justify-content: flex-end;
-    padding-right: 3vh;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 25px;
+    border-bottom: 2px solid #0a0a0a;
 }
 
-.header1 button {
-    padding-top: 5px;
-    width: 30px;
-    height: 30px;
-    background-color: rgb(54, 54, 54);
-    border: 1px solid white;
-    border-radius: 5px;
+.Banner_compra {
+    color: #d1d1d1;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 14px;
+    letter-spacing: 0.5px;
 }
 
-.header1 button img {
-    width: 50%;
-    height: 50%;
-    object-fit: contain;
+.Banner_compra:hover {
+    color: #ffffff;
+}
+
+.btnuser {
+    background-color: transparent;
+    border: 1px solid #9e9e9e;
+    color: #ffffff;
+    border-radius: 6px;
+    padding: 5px 7px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+.btnuser:hover {
+    border-color: #ffffff;
+    color: #00adee;
+}
+
+.btnuser svg {
+    width: 20px;
+    height: 20px;
 }
 
 /*Header #2*/
