--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@
 
 }
 .video-background {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -872,7 +872,7 @@ footer{
 
   .hero img, .hero video {
     width: 100%;
-    height: auto;
+    height: 100vh;
   }
 
   .featured-games {
